<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This file allows nanoflann to be built inside a ROS workspace and
     indexed by the ROS build farm as a plain CMake package. -->
<package format="3">
  <name>nanoflann</name>
  <version>1.10.1</version>
  <description>
    nanoflann: a C++11 header-only library for Nearest Neighbor (NN) search
    with KD-trees, optimized for point clouds and Eigen matrices.
  </description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>

  <license file="COPYING">BSD-2-Clause</license>

  <url type="website">https://github.com/jlblancoc/nanoflann</url>
  <url type="bugtracker">https://github.com/jlblancoc/nanoflann/issues</url>

  <buildtool_depend>cmake</buildtool_depend>

  <!-- libgtest-dev is needed for unit tests on the build farm -->
  <test_depend>libgtest-dev</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
